style.css
:root {
  --font-family: monospace;
  --primary-color: #0000fe;
  --background-color: #e1ecfe;
}

body {
	font-family: var(--font-family);
	margin: 0;
	padding: 5px 25px;
	background-color: var(--background-color);
	color: var(--primary-color);
}

h2 {
	text-decoration: underline;
}

#parent {
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	grid-column-gap: 10px;
	grid-row-gap: 10px;
}

.content {
	border-style: double;
	padding: 10px;
	text-align: center;
}

#header {
	grid-area: 1 / 1 / 2 / -1;
	border-style: double;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	background-image: url("images/banner.png");
	grid-template-rows: auto;
	height: 200px;
}

#header a {
	text-decoration: none;
}

#grid-1 {
	grid-area: 2 / 1 / 3 / 3;
}

#grid-2 {
	grid-area: 2 / 3 / 3 / 6;
}

#grid-3 {
	grid-area: 3 / 4 / 3 / 5;
}

#grid-4 {
	grid-area: 2 / 6 / 3 / 6;
}

#grid-5 {
  grid-area: 3 / 1 / 3 / 4;
}

#grid-6 {
  grid-area: 3 / 5 / 3 / -1;
}

#grid-1 img {
	max-height: 400px;
	max-width: 100%;
	width: auto;
}

#grid-3 img {
	max-height: 200px;
	max-width: 100%;
	width: auto;
}

#grid-4 img {
	max-height: 250px;
	max-width: 100%;
	width: auto;
}

#grid-5 img {
	max-height: 75px;
	max-width: 100%;
	width: auto;
}

#title {
	text-align: center;
	font-size: 0.7rem;
	font-weight: bold;
	margin: 0;
	background-color: var(--background-color);
}

.demo {
  border: 1px dashed blue;
  margin-bottom: 10px;
  padding: 5px;
}

a,
#header a:visited {
	text-decoration: underline;
	color: var(--primary-color);
}

a:visited {
	color: #0000a6;
}

a:hover {
	color: #5757ff;
}

#localTime {
	text-align: right;
	margin: 0;
	padding: 0;
}

#email-error-label {
	color: red;
}

#email-success-label {
	color: green;
}

ul {
	list-style-type: square;
	text-align: left;
}

#not-found,
#unsubscribe,
#links {
	text-align: center;
	font-size: 1.2rem;
}

#links {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

#links a button {
	padding: 20px;
	margin: 10px auto;
	background-color: var(--primary-color);
	border: none;
	font-family: var(--font-family);
  font-size: 1.2rem;
  width: 100%;
}

#links button i {
  color: #ffffff;
  margin-right: 8px;
}

#links a {
  text-decoration: none;
  display: block;
  width: 50%;
}

#links a button {
	color: #ffffff;
}

#links h2 {
  margin: 10px;
}

#links img {
  height: 150px;
  border-radius: 200px;
  margin-bottom: 10px;
}

#newsletter-form input[type=submit],
#unsubscribe-form input[type=submit] {
	padding: 5px;
	margin-top: 5px;
	background-color: var(--primary-color);
	border: none;
	color: #ffffff;
}

#newsletter-form input[type=submit] {
	width: 100%;
}

input {
	font-family: var(--font-family);
}

#newsletter-form {
	text-align: left;
}

#newsletter-form label {
	font-weight: bold;
}

#newsletter-form input[type=text],
#unsubscribe-form input[type=text] {
	padding: 5px;
	box-sizing: border-box;
}

#newsletter-form input[type=text] {
	width: 100%;
}

#newsletter-form input[type=submit] {
	padding: 5px;
	margin-top: 5px;
	background-color: var(--primary-color);
	border: none;
	color: #ffffff;
	width: 100%;
}

#newsletter-form input[type=submit]:hover,
#unsubscribe-form input[type=submit]:hover,
#links button:hover {
	background-color: #5757ff;
	cursor: pointer;
}

#email-disclaimer {
	font-size: 0.9em;
}

.youtube-video {
  aspect-ratio: 16 / 9;
  width: 90%;
}

#grid-5 audio {
  width: 80%;
}

@media screen and (max-width: 1200px) {
	body {
		padding: 5px;
	}

	#localTime {
		text-align: center;
	}

	#parent {
		grid-template-columns: 1fr;
	}

	#header {
		height: 150px;
	}

	#header,
	#grid-1,
	#grid-2,
	#grid-3,
	#grid-4,
	#grid-5,
	#grid-6 {
		grid-column: span 1;
		grid-area: unset;
	}

	#title {
		font-size: 0.4rem;
		margin: 10px 0;
	}

  #links a {
    width: 80%;
  }
}

@media screen and (max-width: 600px) {
	#title {
		font-size: 0.25rem;
		margin: 10px 0;
	}

	#header {
		height: 100px;
	}

  #links a {
    width: 90%;
  }
}

